add jdk17fx for ci & cleanup