@@ -15,8 +15,6 @@ java {
 }
 
 compileJava {
-    options.compilerArgs << '--add-exports' << 'javafx.controls/javafx.scene.control.skin=ALL-UNNAMED'
-
     options.compilerArgs << '--add-exports' << 'javafx.graphics/com.sun.javafx.text=ALL-UNNAMED'
     options.compilerArgs << '--add-exports' << 'javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED'
     options.compilerArgs << '--add-exports' << 'javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED'
@@ -159,49 +157,6 @@ task runWithAgent(type: JavaExec) {
     // jvmArgs "--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED"
     // jvmArgs "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED"
 
-}
-task runX(type: JavaExec) {
-    dependsOn configurations.agent
-
-  	group = 'application'
-	  description = 'Runs the sample with the glass platfrom configured'
-
-    javaLauncher = javaToolchains.launcherFor {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-
-    classpath sourceSets.main.runtimeClasspath
-    mainClass = 'uia.sample.Simple'
-
-    systemProperties "uia.log": true
-    systemProperties "uia.loglevel": 1
-    //jvmArgs ""
-    //jvmArgs "-javaagent:${getAgentJar()}"
-    // jvmArgs "-verbose:jni"
-
-    // from UIAPlatform
-    jvmArgs "--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED"
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED"
-
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"
-
-    // from sample
-    jvmArgs "--add-exports=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED"
-
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.text=ALL-UNNAMED"
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED"
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED"
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED"
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED"
-
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED"
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.font=ALL-UNNAMED"
-
-    jvmArgs "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED"
-
-    jvmArgs "--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED"
-    jvmArgs "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED"
 }
 
 task debugWithAgent(type: JavaExec) {
